--- a/site/index.html
+++ b/site/index.html
@@ -66,7 +66,7 @@
 
 		<div id="home-tiles" class="row">
 			<div class="col-md-12 col-sm-12 col-xs-12">
-			  <a href="Intro.html"><div id="intro-tile"><span>Introduction to Computer Programming</span></div></a>
+			  <a href="intro.html"><div id="intro-tile"><span>Introduction to Computer Programming</span></div></a>
 			</div>
 			<div class="col-md-4 col-sm-6 col-xs-12">
 			  <a href="HTMLdoc.html"><div id="html-tile"><span>HTML</span></div></a>
