--- a/site/index.html
+++ b/site/index.html
@@ -78,7 +78,7 @@
 				<a href="js.html"><div id="js-tile"><span>JS</span></div></a>
 			</div>
 			<div class="col-md-12 col-sm-12 col-xs-12">
-				<a target="_blank" href="https://codepen.io/dweinz/pen/GdMbPz"><div id="codepen-tile"><span>CODEPEN</span></div></a>
+				<a target="_blank" href="https://codepen.io/aravindkumarak005/pen/mdjRxqE"><div id="codepen-tile"><span>CODEPEN</span></div></a>
 			</div>
 		</div><!-- End of #home-tiles -->
 		
