--- a/site/HTMLdoc.html
+++ b/site/HTMLdoc.html
@@ -35,7 +35,30 @@
 
         <div class="container">
             <h2 id="heading-intro" align="center" style="font-family: 'Times New Roman', Times, serif;"><b>HTML - Hypertext Markup Language</b></h2>
+            <h3 id="heading-intro" align="center" style="font-family: 'Times New Roman', Times, serif;"><b>From HTML 1.0 to HTML 5.0 & The evlution of Browsers</b></h3>
+            <P style="text-align: center;">(click on each year)</P>
+            <p style="text-align:center;"><img src="images/timbernerslee.jpg" width="100" alt="Tim Berners-Lee">
+                <img src="images/mosaic.png" width="100" alt="Tim Berners-Lee">
+                <a href="#nav"><span>1990 to 1994</span></a>
+                <div class="expandable" id="nav">
+                  <p>Tim Berners-Lee- A British Scientst<br>-Invented the World Wide Web<br>HTML 1.0</p>
+                </div>
+            </p>
+            
+            <p style="text-align:center;"><img src="images/ietf.png" width="100" alt="Tim Berners-Lee">
+                <img src="images/w3c.jpg" width="100" alt="Tim Berners-Lee">
+                <a href="#nav2"><span>1995 to 1999</span></a>
+                <div class="expandable" id="nav2">
+                  <p>HTML 2.0 to HTML 4.0</p>
+                </div>
+            </p>
 
+            <p style="text-align:center;"><img src="images/html5.jpg" width="100" alt="Tim Berners-Lee">
+                <a href="#nav3"><span>2000 to Present</span></a>
+                <div class="expandable" id="nav3">
+                  <p>HTML 5</p>
+                </div>
+            </p>
         </div>
     </body>
 </HTML>
