--- a/site/intro.html
+++ b/site/intro.html
@@ -21,7 +21,7 @@
                     </a>-->
     
                     <div class="navbar-brand">
-                        <a href="index.html"><h1>YU Learn</h1></a>
+                        <a href="index.html"><h1 class="header-2-col__title">YU Learn</h1></a>
                         <!--<P>
                              <img src="images/book.png" width=20 alt="book logo">
                             <span>Uniting what's next in STEM!</span>
@@ -92,7 +92,10 @@
         </div>
         <h2 id="heading-intro" align="center" style="font-family: 'Times New Roman', Times, serif;"><b>The web history - How the web works.</b></h2>
         <div id="web">
-        <p style="text-align:center;"><img src="images/timbernerslee.jpg" width="300" alt="Tim Berners-Lee"></p>
+        <p style="text-align:center;">Web of documents</p>
+        <p style="text-align:center;"><img src="images/line.png" width="100" alt="Tim Berners-Lee">Web of People</p>
+        <p style="text-align:center;">Web of data & <br> Web of Social Media</p>
+
         <p>Tim Berners-Lee- A British Scientst<br>-Invented the World Wide Web</p>
         </div>
     </div>
