--- a/site/index.html
+++ b/site/index.html
@@ -52,7 +52,7 @@
 					   <a href="#">JS</a>
 					 </li>
 					 <li>
-						<a href="#">Anout Us</a>
+						<a href="#">About Us</a>
 					  </li>
 				   </ul><!-- #nav-list -->
 				 </div><!-- .collapse .navbar-collapse -->
